[gd_scene load_steps=24 format=3 uid="uid://cue6hjf0jgkub"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_4mlsx"]
[ext_resource type="PackedScene" uid="uid://dcva24n81lnur" path="res://scenes/universe.tscn" id="1_ok777"]
[ext_resource type="FontFile" uid="uid://cpfj0tsup3jr" path="res://assets/fonts/PublicPixel-z84yD.ttf" id="3_tm4nd"]
[ext_resource type="Texture2D" uid="uid://bh8lqe58x3mia" path="res://assets/textures/ship_alternative_still.png" id="4_0uj6n"]
[ext_resource type="Texture2D" uid="uid://bdo83gt1wxnuh" path="res://assets/textures/player_ship_still.png" id="4_tvpff"]
[ext_resource type="Texture2D" uid="uid://bpcu7qsrq5sny" path="res://assets/textures/red_laser.png" id="6_wa1jp"]
[ext_resource type="AudioStream" uid="uid://dud3h08hewhay" path="res://assets/audio/button.wav" id="7_cnhw3"]
[ext_resource type="AudioStream" uid="uid://hbql5gp5owh7" path="res://assets/audio/laser_sound.wav" id="8_cwoic"]
[ext_resource type="PackedScene" uid="uid://b4yin1rgl4dcc" path="res://scenes/volume_slider.tscn" id="9_ebusq"]

[sub_resource type="LabelSettings" id="LabelSettings_ke4xa"]
line_spacing = 5.0
font = ExtResource("3_tm4nd")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_j8y3m"]
font = ExtResource("3_tm4nd")
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6ed8"]
bg_color = Color(1, 1, 1, 0.0784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28v32"]
bg_color = Color(0, 0.2, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3jsc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_laqkj"]
line_spacing = 10.0
font = ExtResource("3_tm4nd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdo70"]
bg_color = Color(0, 0, 0, 0.4)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mpooj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlqy6"]
bg_color = Color(0, 0, 0, 0.403922)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogwbx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cw7yp"]
bg_color = Color(0, 0, 0, 0.403922)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wwegi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52bbs"]
bg_color = Color(0, 0, 0, 0.403922)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tv3ud"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mlsx")

[node name="Universe" parent="." instance=ExtResource("1_ok777")]

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -302.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
text = "SAVE
THE
GALAXY"
label_settings = SubResource("LabelSettings_ke4xa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 341.5
offset_bottom = 364.5
grow_horizontal = 2
grow_vertical = 2
text = "High score: 99999"
label_settings = SubResource("LabelSettings_j8y3m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -65.0
offset_right = 89.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tm4nd")
theme_override_styles/normal = SubResource("StyleBoxFlat_c6ed8")
text = "PLAY"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 13.0
offset_right = 89.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tm4nd")
theme_override_styles/normal = SubResource("StyleBoxFlat_c6ed8")
text = "QUIT"

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -226.5
offset_right = 201.0
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28v32")

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 361.0
offset_top = 0.5
offset_right = 401.0
offset_bottom = 35.5
theme_override_fonts/font = ExtResource("3_tm4nd")
theme_override_styles/normal = SubResource("StyleBoxFlat_i3jsc")
text = "X"

[node name="ShipSelection" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -186.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
text = "SELECT YOUR SHIP:"
label_settings = SubResource("LabelSettings_laqkj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectPinkShipButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 211.0
offset_top = 81.0
offset_right = 310.0
offset_bottom = 174.0
theme_override_styles/normal = SubResource("StyleBoxFlat_tdo70")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mpooj")

[node name="Sprite2D" type="Sprite2D" parent="Panel/SelectPinkShipButton"]
position = Vector2(50, 50)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_0uj6n")

[node name="SelectRedShipButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 89.0
offset_top = 81.0
offset_right = 188.0
offset_bottom = 174.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hlqy6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ogwbx")

[node name="Sprite2D" type="Sprite2D" parent="Panel/SelectRedShipButton"]
position = Vector2(50, 50)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_tvpff")

[node name="LaserSelection" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "SELECT YOUR LASER:"
label_settings = SubResource("LabelSettings_laqkj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectRedLaser" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 90.0
offset_top = 252.0
offset_right = 189.0
offset_bottom = 345.0
theme_override_styles/normal = SubResource("StyleBoxFlat_cw7yp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wwegi")

[node name="Sprite2D" type="Sprite2D" parent="Panel/SelectRedLaser"]
position = Vector2(50, 50)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_wa1jp")

[node name="SelectBlueLaser" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 212.0
offset_top = 252.0
offset_right = 311.0
offset_bottom = 345.0
theme_override_styles/normal = SubResource("StyleBoxFlat_52bbs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tv3ud")

[node name="Sprite2D" type="Sprite2D" parent="Panel/SelectBlueLaser"]
self_modulate = Color(1, 5, 100, 1)
position = Vector2(50, 50)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_wa1jp")

[node name="ReadyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 148.0
offset_right = 89.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tm4nd")
theme_override_styles/normal = SubResource("StyleBoxFlat_c6ed8")
text = "READY"

[node name="GameContainer" type="Node2D" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="VolumeSliderLabel" type="Label" parent="Sounds"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 107.0
offset_top = 124.0
offset_right = -39.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
text = "Volume:"
label_settings = SubResource("LabelSettings_j8y3m")
vertical_alignment = 1

[node name="VolumeSlider" parent="Sounds" instance=ExtResource("9_ebusq")]
offset_left = 94.0
offset_top = 566.0
offset_right = 454.0
offset_bottom = 731.0

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_cnhw3")
volume_db = -10.0

[node name="LaserSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_cwoic")
volume_db = -15.0
pitch_scale = 0.89

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/SelectPinkShipButton" to="." method="_on_select_pink_ship_button_pressed"]
[connection signal="pressed" from="Panel/SelectRedShipButton" to="." method="_on_select_red_ship_button_pressed"]
[connection signal="pressed" from="Panel/SelectRedLaser" to="." method="_on_select_red_laser_pressed"]
[connection signal="pressed" from="Panel/SelectBlueLaser" to="." method="_on_select_blue_laser_pressed"]
[connection signal="pressed" from="Panel/ReadyButton" to="." method="_on_ready_button_pressed"]
